--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "6c0e804e-bdef-4933-b011-c3c1b9d02bc9"
 authors = ["Jon Yard"]
 version = "0.1.0"
 
+[deps]
+Caching = "68ad905a-5087-500a-aae7-0fd6acda2eb1"
+Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
+
 [compat]
 julia = "1.7"
 
