--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
+PyCall = "1"
 julia = "1.7"
 
 [extras]
