--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,12 @@ version = "0.1.0"
 
 [deps]
 Caching = "68ad905a-5087-500a-aae7-0fd6acda2eb1"
+Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
+Hecke = "3e1990a7-5d81-5526-99ce-9ba3ff248f21"
 Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
-Oscar = "0.10"
 julia = "1.7"
 
 [extras]
