--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
+Oscar = "0.10"
 julia = "1.7"
 
 [extras]
