--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,10 @@ authors = ["Jon Yard"]
 version = "0.1.0"
 
 [deps]
-Caching = "68ad905a-5087-500a-aae7-0fd6acda2eb1"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 Hecke = "3e1990a7-5d81-5526-99ce-9ba3ff248f21"
+Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
+Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
