--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
+Memoize = "0.4"
 julia = "1.7"
 
 [extras]
