--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Polymake = "d720cf60-89b5-51f5-aff5-213f193123e7"
 
 [compat]
 julia = "1.7"
