--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,5 @@
 # Source files
 # Caution: *.m also matches Matlab files.
 # ============
-*.nb             text diff=mathematica
-*.m              text diff=magma
+*.nb             linguist-language=mathematica
+*.m              linguist-language=magma
