--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Polymake = "d720cf60-89b5-51f5-aff5-213f193123e7"
 
 [compat]
+Hecke = "0.18"
 julia = "1.7"
 
 [extras]
