--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Singular = "bcd08a7b-43d2-5ff7-b6d4-c458787f915c"
 
 [compat]
+Hecke = "0.23"
 julia = "1.9"
 
 [extras]
