--- a/Project.toml
+++ b/Project.toml
@@ -1,21 +1,18 @@
 name = "QP"
 uuid = "6c0e804e-bdef-4933-b011-c3c1b9d02bc9"
 authors = ["Jon Yard"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
-AbstractAlgebra = "c3fe647b-3220-5bb0-a1ea-a7954cac585d"
-Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
-GAP = "c863536a-3901-11e9-33e7-d5cd0df7b904"
-Hecke = "3e1990a7-5d81-5526-99ce-9ba3ff248f21"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
-Nemo = "2edaba10-b0f1-5616-af89-8c11ac63239a"
 Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-Singular = "bcd08a7b-43d2-5ff7-b6d4-c458787f915c"
 
 [compat]
-julia = "1.9"
+Memoize = "v0.4.4"
+Oscar = "v0.14.0"
+Plots = "v1.3.9"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
