--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
+Hecke = "0.29"
 Memoize = "0.4.4"
 Oscar = "1.0.0"
 Plots = "1.3.9"
