--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Hecke = "3e1990a7-5d81-5526-99ce-9ba3ff248f21"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 
 [compat]
 Memoize = "0.4.4"
