--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 Memoize = "0.4.4"
 Oscar = "1.0.0"
 Plots = "1.3.9"
+Pluto = "0.19"
 julia = "1.10"
 
 [extras]
