--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 
 [compat]
+Hecke = "0.32"
 Memoize = "0.4.4"
 Oscar = "1.0.0"
 julia = "1.10"
