--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 
 [compat]
+Hecke = "0.33"
 Memoize = "0.4.4"
 Oscar = "1.0.0"
 julia = "1.10"
