--- a/Project.toml
+++ b/Project.toml
@@ -4,13 +4,11 @@ authors = ["Jon Yard"]
 version = "0.1.2"
 
 [deps]
-Hecke = "3e1990a7-5d81-5526-99ce-9ba3ff248f21"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
+Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
-Memoize = "0.4.4"
-Oscar = "1.0.0"
 julia = "1.10"
 
 [extras]
