--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
+Oscar = "1"
 julia = "1.10"
 
 [extras]
